--- a/index.html
+++ b/index.html
@@ -44,20 +44,36 @@
   <section style="border-top: #00AD89 solid 8px;" id="about-me" class="subsection">
     <div>
       <h2>About Me</h2>
-        <p>Hello! I'm Parker Allan. I'm a Software Development student at Western Governors University with a strong interest in all things tech.
+        <p>Hello, I'm Parker Allan. I'm a Software Development student at Champlain College with a strong interest in all things tech.
           <br>
           <br>
-          I have been programming for 2+ years and I have experience working with AI and Neural Networks, developing new models as well as correcting labels for Computer Vision.
+          I have been programming for 2+ years and I have professional experience working with Automation, AI and Web Development
           <br>
           <br>
-          Recently, I've been working on my embedded systems programming skills with a STM32F407VG Discovery board and hope to have some completed projects in the near future! Below I have some projects I'd love for you to check out! Also view my GitHub <a style="color: blue;" target=”_blank” href="https://github.com/parkerallan">here.</a></p>
+          Recently, I've been working on my embedded systems programming skills with a STM32F407VG Discovery board and hope to have some completed projects soon. Below I have some projects to check out. Also view my GitHub <a style="color: blue;" target=”_blank” href="https://github.com/parkerallan">here.</a></p>
     </div>
     <div class="headshot-section">
-      <img class="headshot" src="resources/images/me.jpeg" alt="headshot pic"/>
+      <img class="headshot" src="resources/images/pfp.jpeg" alt="headshot pic"/>
     </div>
   </section>
-  <section id="projects" class="subsection-alt">
+  <!--<section id="projects" class="subsection-alt">
     <h2>AI/Embedded Projects</h2>
+      <div class="project-container">
+        <div class="card">
+          <img class="project-image" src="resources/images/slots.png" alt="slot machine game">
+          <h3>Slot Machine iOS</h3>
+          <p class="subtext">Uses SwiftUI, spin using a 100 credits, try to get a matching row horizontal, vertical, or diagonal.
+            <br>
+          </p>
+          <hr />
+          <p class="subtext"><a class="view-text" href="https://youtu.be/NFpPXa1VtKc" target="_blank">Watch
+              Here</a>
+          </p>
+        </div>
+      </div>
+  </section>-->
+  <section id="projects" class="subsection-alt">
+    <h2>Projects</h2>
       <div class="project-container">
         <div class="card">
           <img class="project-image" src="resources/images/data.jpg" alt="data features and fire mask labels">
@@ -70,22 +86,6 @@
               Here</a>
           </p>
         </div>
-        <!--<div class="card">
-          <img class="project-image" src="resources/images/slots.png" alt="slot machine game">
-          <h3>Slot Machine iOS</h3>
-          <p class="subtext">Uses SwiftUI, spin using a 100 credits, try to get a matching row horizontal, vertical, or diagonal.
-            <br>
-          </p>
-          <hr />
-          <p class="subtext"><a class="view-text" href="https://youtu.be/NFpPXa1VtKc" target="_blank">Watch
-              Here</a>
-          </p>
-        </div>-->
-      </div>
-  </section>
-  <section id="projects" class="subsection-alt">
-    <h2>Web/Mobile Projects</h2>
-      <div class="project-container">
         <div class="card">
           <img class="project-image" src="resources/images/stocks.png" alt="slot machine game">
           <h3>Tech Stock Tracker</h3>
