--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <section id="projects" class="subsection-alt">
     <h2>Projects</h2>
       <div class="project-container">
-        <div class="card">
+        <!--<div class="card">
           <img class="project-image" src="resources/images/jetdefender.png" alt="assembly game">
           <h3>Analytics Dashboard</h3>
           <p class="subtext">R App
@@ -87,15 +87,15 @@
           <p class="subtext"><a class="view-text" href="https://github.com/parkerallan/jet-defender" target="_blank">View
               Here</a>
           </p>
-        </div>
+        </div> -->
         <div class="card">
-          <img class="project-image" src="resources/images/jetdefender.png" alt="assembly game">
-          <h3>Social Media App</h3>
-          <p class="subtext">Django App
+          <img class="project-image" src="resources/images/echo.png" alt="social media app">
+          <h3>Project Echo</h3>
+          <p class="subtext">WIP Social media platform using Django. Create posts and interact with others.
             <br>
           </p>
           <hr />
-          <p class="subtext"><a class="view-text" href="https://github.com/parkerallan/jet-defender" target="_blank">View
+          <p class="subtext"><a class="view-text" href="https://github.com/parkerallan/SDEV-435-81" target="_blank">View
               Here</a>
           </p>
         </div>
