remove old projects

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="card">
           <img class="project-image" src="resources/images/supermario.png" alt="gameboy C game">
           <h3>Super Mario Clone</h3>
-          <p class="subtext">WIP recreation of the first Super Mario Bros. game for the Nintendo Gameboy. Uses C language and GBDK-2020 SDK.
+          <p class="subtext">WIP recreation of the first Super Mario Bros. game for the Nintendo Gameboy. Uses C and GBDK.
             <br>
           </p>
           <hr />
@@ -148,25 +148,6 @@
             </p>
           </div>
           <div class="card">
-            <img class="project-image" src="resources/images/slots.png" alt="slot machine game">
-            <h3>Slot Machine iOS</h3>
-            <p class="subtext">Uses SwiftUI, spin using a 100 credits, try to get a matching row horizontal, vertical, or diagonal.
-              <br>
-            </p>
-            <hr />
-            <p class="subtext"><a class="view-text" href="https://youtu.be/NFpPXa1VtKc" target="_blank">Watch
-                Here</a>
-            </p>
-          </div>
-          <div class="card">
-            <img class="project-image" src="resources/images/rockpaperscissor.png" alt="chat app">
-            <h3>Rock Paper Scissors iOS</h3>
-              <p class="subtext">Uses SwiftUI. Play against a bot that randomizes it's roll. Uses the buttons to make your selection.</p>
-            <hr />
-            <p class="subtext"><a class="view-text" href="https://www.youtube.com/watch?v=JU8bOy6KEus" target="_blank">Watch
-                Here</a></p>
-          </div>
-          <div class="card">
             <img class="project-image" src="resources/images/blog.png" alt="">
             <h3>Ruby on Rails Blog</h3>
             <p class="subtext">CRUD app. Uses stimulus reflex for websocket features and gems like Devise and
@@ -174,55 +155,6 @@
             <hr />
             <p class="subtext"><a class="view-text" href="https://parkera-myblog-app.herokuapp.com/" target="_blank">View Here</a>
             </p>
-          </div>
-          <div class="card">
-            <img class="project-image" src="resources/images/chat.png" alt="chat app">
-            <h3>Chatroom</h3>
-            <p class="subtext">A chatroom messenger using Google account auth to login. Made using React and Firebase.</p>
-            <hr />
-            <p class="subtext"><a class="view-text" href="https://optimistic-swanson-38c1ae.netlify.app/" target="_blank">View
-                Here</a></p>
-          </div>
-          <div class="card">
-            <img class="project-image" src="resources/images/wpsite.png" alt="wordpress business site">
-            <h3>Wordpress Biz Site</h3>
-            <p class="subtext">Business Site Mockup using Astra Theme and WPForms for contact inquiries.
-              <br>
-            </p>
-            <hr />
-            <p class="subtext"><a class="view-text" href="https://moronic-divisions.000webhostapp.com/" target="_blank">View
-                Here</a>
-            </p>
-          </div>
-          <div class="card">
-            <img class="project-image" src="resources/images/minesweeper.png" alt="minesweeper app">
-            <h3>Minesweeper</h3>
-            <p class="subtext">Old-school minesweeper! Static app made using primarily JS.
-              <br>
-              <a style="text-decoration: none; color: black;" href="https://www.instructables.com/How-to-play-minesweeper/"
-                target="_blank">How to Play</a>
-            </p>
-            <hr />
-            <p class="subtext"><a class="view-text" href="https://zen-banach-2e0560.netlify.app/" target="_blank">View Here</a>
-            </p>
-          </div>
-          <div class="card">
-            <img class="project-image" src="resources/images/todo.png" alt="todo app">
-            <h3>To-Do List</h3>
-              <p class="subtext">Add and remove tasks you have to do. Uses uuid and react-router.
-              <br>
-            </p>
-            <hr />
-            <p class="subtext"><a class="view-text" href="https://ecstatic-kilby-cb10a8.netlify.app/" target="_blank">View Here</a>
-            </p>
-          </div>
-          <div class="card">
-            <img class="project-image" src="resources/images/moviefinder.png" alt="">
-            <h3>MovieFinder</h3>
-              <p class="subtext">React app to search movies by API request and add/remove favorite movie posters.</p>
-              <hr />
-            <p class="subtext"><a class="view-text" href="https://vigilant-allen-7f26f2.netlify.app/" target="_blank">View
-                Here</a></p>
           </div>
         </div>
       </div>
