--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="hero-area">
       <div class="hero-text">
         <h1>Parker Allan</h1>
-        <p>Software Developer Engineer in Test</p>
+        <p>Software Development Engineer in Test</p>
         <a href="#about-me"><div class="button">About Me</div></a>
       </div>
         <img class="graphic" src="resources/images/graphic.png" alt="graphic">
@@ -143,7 +143,7 @@
               <br>
             </p>
             <hr />
-            <p class="subtext"><a class="view-text" href="https://tech-stock-app.herokuapp.com/" target="_blank">View
+            <p class="subtext"><a class="view-text" href="https://github.com/parkerallan/tech-stock-app/" target="_blank">View
                 Here</a>
             </p>
           </div>
@@ -153,7 +153,7 @@
             <p class="subtext">CRUD app. Uses stimulus reflex for websocket features and gems like Devise and
               Optimism.</p>
             <hr />
-            <p class="subtext"><a class="view-text" href="https://parkera-myblog-app.herokuapp.com/" target="_blank">View Here</a>
+            <p class="subtext"><a class="view-text" href="https://github.com/parkerallan/ror-blog-app/" target="_blank">View Here</a>
             </p>
           </div>
         </div>
