new content, starting the redesign

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <link rel="stylesheet" href="resources/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <script src="https://kit.fontawesome.com/4f1c32824f.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image/png" href="resources/images/favicon.ico" />
+  <!-- <link rel="icon" type="image/png" href="resources/images/favicon.ico" /> -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WWVMGN3FXC"></script>
   <script>
@@ -22,10 +22,11 @@
 <body>
   <section class="hero">
     <nav>
-      <img class="logo" src="resources/images/logo.png" alt="logo">
+      <!-- <img class="logo" src="resources/images/logo.png" alt="logo"> -->
       <ul id="nav-list">
         <!--<li><a href="#about-me">About Me</a></li>-->
         <li><a href="#projects">Projects</a></li>
+        <li><a href="#blog">Blog</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
       <button class="hamburger" id="hamburger">
@@ -63,7 +64,7 @@
       <div id="hidden-content" class="project-container"></div>
     </div>
     <div>
-      <h4 style='color: rgb(47, 49, 49); cursor: pointer; margin-bottom: 30px;' id="viewBtn" onclick="viewMore()">View Older Projects <i
+      <h4 style='color: rgb(47, 49, 49); cursor: pointer; margin-bottom: 30px;' class="view-older-btn" id="viewBtn" onclick="viewMore()">View Older Projects <i
         class="fas fa-arrow-circle-down"></i>
       </h4>
     </div>
@@ -94,6 +95,13 @@
           <a href="https://twitter.com/parkxrdev" target="_blank" class="icon">
             <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
               <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
+            </svg>
+          </a>
+        </div>
+        <div>
+          <a href="https://bsky.app/profile/parkxrdev.bsky.social" target="_blank" class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" viewBox="0 0 576 512">
+              <path d="M407.8 294.7c-3.3-.4-6.7-.8-10-1.3c3.4 .4 6.7 .9 10 1.3zM288 227.1C261.9 176.4 190.9 81.9 124.9 35.3C61.6-9.4 37.5-1.7 21.6 5.5C3.3 13.8 0 41.9 0 58.4S9.1 194 15 213.9c19.5 65.7 89.1 87.9 153.2 80.7c3.3-.5 6.6-.9 10-1.4c-3.3 .5-6.6 1-10 1.4C74.3 308.6-9.1 342.8 100.3 464.5C220.6 589.1 265.1 437.8 288 361.1c22.9 76.7 49.2 222.5 185.6 103.4c102.4-103.4 28.1-156-65.8-169.9c-3.3-.4-6.7-.8-10-1.3c3.4 .4 6.7 .9 10 1.3c64.1 7.1 133.6-15.1 153.2-80.7C566.9 194 576 75 576 58.4s-3.3-44.7-21.6-52.9c-15.8-7.1-40-14.9-103.2 29.8C385.1 81.9 314.1 176.4 288 227.1z"/>
             </svg>
           </a>
         </div>
