another big update blog added new graphic etc

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 <body>
   <section class="hero">
     <nav>
-      <!-- <img class="logo" src="resources/images/logo.png" alt="logo"> -->
       <ul id="nav-list">
-        <!--<li><a href="#about-me">About Me</a></li>-->
         <li><a href="#projects">Projects</a></li>
         <li><a href="#blog">Blog</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -38,8 +36,8 @@
         <h1>Parker Allan</h1>
         <p>Software Development Engineer in Test</p>
       </div>
-        <img class="graphic" src="resources/images/graphic.png" alt="graphic">
-    </div>  
+    </div>
+    <img class="graphic" src="resources/images/graphic1.png" alt="graphic">
   </section>
   
   <!-- Floating Navigation Arrow -->
@@ -85,7 +83,7 @@
   
   <section id="blog" class="subsection">
     <div>
-      <h2>Blog</h2>
+      <h2>Blog <a href="/feed.xml" target="_blank" class="rss-link" title="Subscribe to RSS Feed"><i class="fas fa-rss"></i></a></h2>
       <div class="blog-container">
         <div id="blog-list" class="blog-list">
           <!-- Blog articles will be populated dynamically by JavaScript -->
