updates for go-live

--- a/index.html
+++ b/index.html
@@ -48,13 +48,11 @@
   <section id="about-me" class="subsection">
     <div>
       <h2>About Me</h2>
-        <p>Hello, I'm Parker Allan. I'm a Software Development Major from Champlain College with a strong interest in all things tech.
-          <br>
-          <br>
-          I have been programming for 4+ years and I have professional experience working with QA Automation and Web Development. I'm interested in analytical insight and building better software.
-          <br>
-          <br>
-          Recently, I've been working on my development skills. Below I have some projects to check out. Also view my GitHub <a style="color: blue;" target=”_blank” href="https://github.com/parkerallan">here.</a></p>
+        <p>Hello, I'm Parker Allan — a Software Development Engineer in Test with a strong foundation in programming and a growing passion for computer systems and architecture. 
+          <br><br> With over four years of experience in the tech industry, my work includes the development and quality assurance of IAM, Automation, and Artificial Intelligence applications. I thrive at the intersection of reliability, performance, and user experience. 
+          <br><br> Lately, my focus has expanded to include FPGA design, digital logic, and low-level systems programming, as I explore hardware/software co-design to solve more complex engineering problems. 
+          <br><br> Below you can find my github, resume, and projects I’ve been building.
+        </p>
         <div class="about-buttons">
           <a href="https://github.com/parkerallan" target="_blank" class="about-btn">
             <i class="fab fa-github"></i> View GitHub
