--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
           <a href="https://github.com/parkerallan" target="_blank" class="about-btn">
             <i class="fab fa-github"></i> View GitHub
           </a>
-          <a href="resources/docs/r_parker.pdf" target="_blank" class="about-btn">
+          <a href="resources/docs/resume.pdf" target="_blank" class="about-btn">
             <i class="fas fa-file-pdf"></i> View Resume
           </a>
         </div>
     </div>
     <div class="headshot-section">
-      <img class="headshot" src="resources/images/pfp.jpeg" alt="headshot pic"/>
+      <img class="headshot" src="resources/images/pfp2.png" alt="headshot pic"/>
     </div>
   </section>
   <section id="projects" class="subsection-alt">
